Add logic to cancel matches and update availabilities (#34)
* Add Match entity and repo logic

* Add match field to serialized user

* Update user-match relationship to many-to-many

* Updated relations typo

* Extract util functions

* Add dev route to create matches

* Add GetMatchHistory Router

* Add check for invalid netID

* Add CancelMatch and UpdateMatchAvailabilities routers

* Update documentation

* Address PR comments
